...
              {this.props.username}
            </Text>
            <Text style={[styles.MediumText, styles.InfoText]}>Tap on the link in your email to confirm your email address...</Text>
          </View>
          <View style={styles.ButtonContainer}>
            <Button
              testID="openEmail"
              title="OPEN EMAIL APP"
              onPress={() => this.openMailApp()}
            />
          </View>
          <View style={styles.ButtonContainer}>
            <Button
              testID="checkverifyEmail"
              title="I HAVE VERIFIED MY EMAIL"
              onPress={() => this.checkConfirmation()}
              disabled={!this.state.openedEmail}
            />
          </View>
          <View style={styles.ButtonContainer}>
...
